add missing Java bean classes and compose them with existing ones to reflect our complete yaml structure specification